gcc/testsuite/rust/rustc/ui/issues/issue-38919.rs
fn foo<T: Iterator>() {
    T::Item; // { dg-error ".E0599." "" { target *-*-* } }
}

fn main() { }

